argocd/frigate/templates/ingress.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: frigate
spec:
  entryPoints:
    - websecure
  routes:
    - match: Host(`frigate.nest.jurabytes.net`)
      kind: Rule
      services:
        - name: frigate
          port: http
      middlewares:
        - name: internal-only
          namespace: traefik
  tls:
    certResolver: letsencrypt
